04/demos/demo2/bookinfo-namespace-authorization-policies.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: bookinfo-authz
  namespace: bookinfo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/bookinfo/sa/bookinfo-productpage"]
    to:
    - operation:
        methods: ["GET"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: productpage-authz
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-gateway/sa/secret-reader"]
    to:
    - operation:
        methods: ["GET"]
